syntax = "proto3";

package phi;
option go_package = "github.com/clstb/phi/proto";


import "google/protobuf/empty.proto";
import "gw.proto";


message SyncMessage {
  string Username = 1;
  string token = 2;
}

message FileChunkMessage {
  bytes Chunk = 1;
}


service BeanAccountService {

  rpc SyncLedger (SyncMessage) returns (google.protobuf.Empty);
  rpc DownLoadBeanAccountFile (StringMessage) returns (stream FileChunkMessage);

}
